@startuml class_security
title Classes — Security and Access Control (dynamic RBAC)

left to right direction

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 65
skinparam class {
  BackgroundColor       #FFFFFF
  BorderColor           #808080
  BorderThickness       1
  HeaderBackgroundColor #FFFFFF
  FontColor             #333333
  FontName              Helvetica
  FontSize              11
  FontStyle             plain
  AttributeFontColor    #333333
  AttributeFontName     Helvetica
  AttributeFontSize     10
}
skinparam enum {
  BackgroundColor       #FFFFFF
  BorderColor           #808080
  BorderThickness       1
  HeaderBackgroundColor #FFFFFF
  FontColor             #333333
  FontName              Helvetica
  FontSize              15
  AttributeFontColor    #333333
  AttributeFontName     Helvetica
  AttributeFontSize     10
}
skinparam ArrowColor      #333333
skinparam ArrowThickness  1.4
skinparam ArrowFontColor  #000000
skinparam ArrowFontStyle  plain
skinparam ArrowFontName   Helvetica
skinparam ArrowFontSize   12
skinparam TitleFontName   Helvetica
skinparam TitleFontSize   13
skinparam TitleFontColor  #333333
skinparam noteBorderColor     #AAAAAA
skinparam noteBackgroundColor #FAFAFA
skinparam noteFontName        Helvetica
skinparam noteFontSize        11
hide circle
hide empty methods

class User {
  - email : String
  - active : boolean
  - firstLogin : boolean
  - tokenVersion : int
}

class Role {
  - name : String
}

class Permission {
  - code : String
  - module : String
}

User "*" -- "1" Role : has
Role "*" -- "*" Permission : grants
note bottom of User
  Incrementing tokenVersion revokes all active sessions.
end note

note bottom of Permission
  The role→permission matrix is stored in the database, not hardcoded.
end note

@enduml
